--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "rn-livestream-example",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios"
   },
   "dependencies": {
-    "expo": "^34.0.1",
-    "react": "16.8.3",
-    "react-dom": "^16.8.6",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
-    "react-native-web": "^0.11.4"
+    "react": "16.6.3",
+    "react-native": "0.57.8",
+    "react-native-nodemediaclient": "^0.1.2",
+    "react-native-video": "^4.4.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^6.0.0"
+    "babel-jest": "24.5.0",
+    "jest": "24.5.0",
+    "metro-react-native-babel-preset": "0.53.1",
+    "react-test-renderer": "16.6.3"
   },
-  "private": true
+  "jest": {
+    "preset": "react-native"
+  }
 }
